large desktop page header alignment fix

--- a/assets/styles/1-theme/_variables.pcss
+++ b/assets/styles/1-theme/_variables.pcss
@@ -27,6 +27,10 @@
             --content-gutter: rem(80);
         }
 
+        @media (width >= 1568px) {
+            --content-gutter: 19rem;
+        }
+
         /* --------------------------------------------------- */
         /* Widths */
         /* --------------------------------------------------- */
